--- a/niginx/image.yaml
+++ b/niginx/image.yaml
@@ -3,19 +3,19 @@ kind: Deployment
 metadata:
   name: nginx-deployment
   labels:
-    app: nginx
+    app: MyApp
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: MyApp
   template:
     metadata:
       labels:
-        app: nginx
+        app: MyApp
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: nginx:1.18.0-alpine-perl
         ports:
         - containerPort: 80
